--- a/templates/register.html
+++ b/templates/register.html
@@ -3,33 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juoksupäiväkirja</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Linkki CSS-tiedostoon -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script src="script.js" defer></script> <!-- Linkki JavaScript-tiedostoon -->
 </head>
 <body>
-    <header>
-        <h1>Tervetuloa Juoksupäiväkirjaan!</h1>
-        <nav>
+    <header class="banner">
+        <nav class="nav-links">
             <ul>
-                <li><a href="/">Etusivu</a></li>
-                <li><a href="/register">Rekisteröidy</a></li>
-                <li><a href="/login">Kirjaudu sisään</a></li>
-                <li><a href="/paivakirja">Päiväkirja</a></li>
-                <li><a href="/browseruns">Selaa juoksuja</a></li>
+                <li>
+                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Lenkkipolku logo" class="banner-logo">
+                </li>
+                <li><a href="/">ETUSIVU</a></li>
+                <li><a href="/register">REKISTERÖIDY</a></li>
+                <li><a href="/login">KIRJAUDU SISÄÄN</a></li>
+                <li><a href="/paivakirja">PÄIVÄKIRJA</a></li>
+                <li><a href="/browseruns">SELAA</a></li>
+                <li><a href="/kisat">KISAT</a></li>
             </ul>
         </nav>
     </header>
 
+    <div class="top-banner">
+        <h2>Rekisteröidy käyttäjäksi</h2>
+    </div>
+
     <main>
         <section>
-            <h2>Otsikko</h2>
-            <p>edit.edit.edit</p>
+            <h2>Hienoa, Aloitetaan!</h2>
+            <p> * kohdat pakollisia</p>
         </section>
 
+        <form class="register-form" metrhod="POST" action="/register">
+
+            <label for="fname">Etunimi*:</label>
+            <input type="text" id="fname" name="fname" placeholder="Etunimesi" required>
+            <label for="lname">Sukunimi*:</label>
+            <input type="text" id="lname" name="lname" placeholder="Sukunimesi" required>
+
+            <label for="username">Käyttäjänimi*:</label>
+            <input type="text" id="username" name="username" placeholder="Valitse käyttäjänimi" required>
+
+            <label for="password">Salasana*:</label>
+            <input type="password" id="password" name="password" placeholder="Valitse salasana" required>
+
+            <label for="password2">Salasana uudestaan*:</label>
+            <input type="password" id="password2" name="password2" placeholder="Toista salasana" required>
+            
+            <button type="submit">Rekisteröidy</button>
+        </form>
+
         <section>
-            <h2>Toinen osio</h2>
-            <p>edit.edit.edit</p>
+            <p>Viimeistele rekisteröintisi painamalla "rekisteröidy" nappia!</p>
         </section>
     </main>
 
