--- a/templates/paivakirja.html
+++ b/templates/paivakirja.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <script src="script.js" defer></script> <!-- Linkki JavaScript-tiedostoon -->
 </head>
 <body>
     <header class="banner">
@@ -14,8 +13,7 @@
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Lenkkipolku logo" class="banner-logo">
                 </li>
                 <li><a href="/">ETUSIVU</a></li>
-                <li><a href="/register">REKISTERÖIDY</a></li>
-                <li><a href="/login">KIRJAUDU SISÄÄN</a></li>
+                <li><a href="/logout">KIRJAUDU ULOS</a></li>
                 <li><a href="/paivakirja">PÄIVÄKIRJA</a></li>
                 <li><a href="/browseruns">SELAA</a></li>
                 <li><a href="/kisat">KISAT</a></li>
@@ -23,15 +21,38 @@
         </nav>
     </header>
 
-    <main>
-        <section>
-            <h2>Otsikko</h2>
-            <p>edit.edit.edit</p>
-        </section>
+    <div class="top-banner">
+        <h2>Tervetuloa juoksupäiväkirjaasi, {{ username }}</h2>
+    </div>
 
-        <section>
-            <h2>Toinen osio</h2>
-            <p>edit.edit.edit</p>
+    <main>
+
+        {%if error %}
+            <p class="error">{{ error }}</p>
+        {% endif %}
+
+        <a href="/uusijuoksu"><button>Lisää uusi merkintä</button></a>
+
+        <section class="entries">
+            {% if entries %}
+                <ul>
+                    {% for entry in entries %}
+                    <li>
+                        <strong>{{ entry['distance_km'] }} km {{ entry['distance_m'] }} m</strong>
+                        {{ entry['time'] }} -
+                        {{ entry['terrain'] }} -
+                        {{ entry['run_type'] }}
+                        {% if entry['race_name'] %}(Kisa: {{ entry['race_name']}}){% endif %}
+                        <br>
+                        <em>{{ entry['other'] }}</em>
+                        <br>
+                        <small>{{ entry['created_at'] }}</small>
+                    </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p>Aloita lisäämällä ensimmäinen juoksumerkintäsi!</p>
+            {% endif %}
         </section>
     </main>
 
