--- a/templates/paivakirja.html
+++ b/templates/paivakirja.html
@@ -31,7 +31,7 @@
             <p class="error">{{ error }}</p>
         {% endif %}
 
-        <a href="/uusijuoksu"><button>Lisää uusi merkintä</button></a>
+        <a href="{{ url_for('add_entry') }}" class="button-link">Lisää uusi merkintä</a>
 
         <section class="entries">
             {% if entries %}
@@ -39,7 +39,7 @@
                     {% for entry in entries %}
                     <li>
                         <strong>{{ entry['distance_km'] }} km {{ entry['distance_m'] }} m</strong>
-                        {{ entry['time'] }} -
+                        {{ entry['runtime'] }} -
                         {{ entry['terrain'] }} -
                         {{ entry['run_type'] }}
                         {% if entry['race_name'] %}(Kisa: {{ entry['race_name']}}){% endif %}
@@ -47,6 +47,7 @@
                         <em>{{ entry['other'] }}</em>
                         <br>
                         <small>{{ entry['created_at'] }}</small>
+                        <a href="{{ url_for('edit_entry', entry_id=entry['id']) }}" class="button-link">Muokkaa tai poista merkintä</a>
                     </li>
                     {% endfor %}
                 </ul>
@@ -54,6 +55,7 @@
                 <p>Aloita lisäämällä ensimmäinen juoksumerkintäsi!</p>
             {% endif %}
         </section>
+
     </main>
 
     <footer>
