--- a/templates/paivakirja.html
+++ b/templates/paivakirja.html
@@ -13,6 +13,7 @@
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Lenkkipolku logo" class="banner-logo">
                 </li>
                 <li><a href="/">ETUSIVU</a></li>
+                <li><a href="/login">KIRJAUDU SISÄÄN</a></li>
                 <li><a href="/logout">KIRJAUDU ULOS</a></li>
                 <li><a href="/paivakirja">PÄIVÄKIRJA</a></li>
                 <li><a href="/browseruns">SELAA</a></li>
@@ -48,6 +49,8 @@
                         <br>
                         <small>{{ entry['created_at'] }}</small>
                         <a href="{{ url_for('edit_entry', entry_id=entry['id']) }}" class="button-link">Muokkaa tai poista merkintä</a>
+                        <p></p>
+                        <p></p>
                     </li>
                     {% endfor %}
                 </ul>
