--- a/templates/kisat.html
+++ b/templates/kisat.html
@@ -13,8 +13,8 @@
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Lenkkipolku logo" class="banner-logo">
                 </li>
                 <li><a href="/">ETUSIVU</a></li>
-                <li><a href="/register">REKISTERÖIDY</a></li>
                 <li><a href="/login">KIRJAUDU SISÄÄN</a></li>
+                <li><a href="/logout">KIRJAUDU ULOS</a></li>
                 <li><a href="/paivakirja">PÄIVÄKIRJA</a></li>
                 <li><a href="/browseruns">SELAA</a></li>
                 <li><a href="/kisat">KISAT</a></li>
@@ -22,16 +22,43 @@
         </nav>
     </header>
 
+    <div class="top-banner">
+        <h2>Tervetuloa juoksupäiväkirjaasi, {{ username }}</h2>
+    </div>
+
     <main>
-        <section>
-            <h2>Otsikko</h2>
-            <p>edit.edit.edit</p>
+
+        {%if error %}
+            <p class="error">{{ error }}</p>
+        {% endif %}
+
+        <a href="{{ url_for('add_entry') }}" class="button-link">Lisää uusi merkintä</a>
+
+        <section class="entries">
+            {% if entries %}
+                <ul>
+                    {% for entry in entries %}
+                    <li>
+                        <strong>{{ entry['distance_km'] }} km {{ entry['distance_m'] }} m</strong>
+                        {{ entry['runtime'] }} -
+                        {{ entry['terrain'] }} -
+                        {{ entry['run_type'] }}
+                        {% if entry['race_name'] %}(Kisa: {{ entry['race_name']}}){% endif %}
+                        <br>
+                        <em>{{ entry['other'] }}</em>
+                        <br>
+                        <small>{{ entry['created_at'] }}</small>
+                        <a href="{{ url_for('edit_entry', entry_id=entry['id']) }}" class="button-link">Muokkaa tai poista merkintä</a>
+                        <p></p>
+                        <p></p>
+                    </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p>Aloita lisäämällä ensimmäinen juoksumerkintäsi!</p>
+            {% endif %}
         </section>
 
-        <section>
-            <h2>Toinen osio</h2>
-            <p>edit.edit.edit</p>
-        </section>
     </main>
 
     <footer>
