--- a/static/styles.css
+++ b/static/styles.css
@@ -227,3 +227,10 @@ body {
 .entry-form button:hover {
     background-color: #0b476f7b;
 }
+
+.description {
+    white-space: pre-line;
+    max-width: 900px;
+    margin: 1rem auto;
+    font-size: x-large;
+}
