--- a/templates/kisat.html
+++ b/templates/kisat.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="top-banner">
-        <h2>Kisasivut tulossa</h2>
+        <h2>Tervetuloa kisaamaan</h2>
     </div>
 
     <main>
