--- a/templates/kisa_sivu.html
+++ b/templates/kisa_sivu.html
@@ -22,15 +22,14 @@
         </nav>
     </header>
 
-    <div class="top-banner">
+
+    <main class="competition-page">
+
         {%if competition['banner_image'] %}
         <section>
             <img src="{{ url_for('static', filename='images/' + competition['banner_image']) }}" alt="Kisan banneri" class="alt-banner">
         </section>
         {% endif %}
-    </div>
-
-    <main>
 
 
         {%if competition['map_image'] %}
@@ -39,15 +38,45 @@
         </section>
         {% endif %}
 
-        <section>
-            <p class="description">{{ competition['description'] }}</p>
+        <section class="competition-content">
+            <div class="descriptions card">
+                <h2>Kilpailun tiedot</h2>
+                <p>{{ competition['description'] }}</p>
+                <p>{{ competition['description2'] }}</p>
+            </div>
+            <aside class="stats-box card">
+                <h2>TOP 10 AJAT</h2>
+                <ol>
+                    {% for result in top_result %}
+                        <li>{{result['username']}} - {{result['runtime']}}</li>
+                    {%else%}    
+                        <p>Tulokset päivittyvät myöhemmin</p>
+                    {%endfor%}
+                </ol>
+            </aside>
         </section>
 
-        <section>
-            <p class="description">{{ competition['description2'] }}</p>
+        <section class="comments card">
+            <h3>Keskustelu kilpailusta</h3>
+            {% if session.get("user_id") %}
+            <form method="post" class="comment-form">
+               <textarea name="comment" rows="8" class="comment-textarea" placeholder="Osallistu keskusteluun" required></textarea>
+               <button type="submit" class="comment-submit">Lähetä</button>
+            </form>
+            {%else%}
+            <p><a href="/login">Kirjaudu sisään</a> kommentoidaksesi.</p>
+            {%endif%}
+            <div class="comment-list">
+                {% for c in comments %}
+                    <div class="comment">
+                        <p><strong>{{c['username']}}</strong> ({{c['created_at']}}):</p>
+                        <p>{{c['comment']}}</p>
+                    </div>
+                {%else%}
+                <p>Ei kommentteja.</p>
+                {%endfor%}
+            </div>
         </section>
-
-
 
     </main>
 
