--- a/templates/browseruns.html
+++ b/templates/browseruns.html
@@ -32,37 +32,46 @@
         {%if error %}
             <p class="error">{{ error }}</p>
         {% endif %}
-        <form method="GET" action="{{ url_for('browse_runs')}}">
-            <label>Käyttäjä:</label>
-            <input type="text" name="username" placeholder="käyttäjänimi">
-            <p></p>
-            <label> Juoksun pituus:</label>
-            <div class="inline-inputs">
-                <input type="number" name="km" placeholder="km" min="0">
+        <form method="GET" action="{{ url_for('browse_runs')}}" class="search-group">
+            <div class="rows">
+                <label>Käyttäjä:</label>
+                <input type="text" name="username" placeholder="käyttäjänimi">
             </div>
-            <p></p>
-            <label for="terrain">Maasto:</label>
-            <div class="checkbox-group">
-                <label><input type="checkbox" name="terrain" value="juoksumatto">Juoksumatto</label>
-                <label><input type="checkbox" name="terrain" value="katu">Katu</label>
-                <label><input type="checkbox" name="terrain" value="rata">Rata</label>
-                <label><input type="checkbox" name="terrain" value="hiekkatie">Hiekkatie</label>
-                <label><input type="checkbox" name="terrain" value="metsä/epätasainen">Metsä/epätasainen</label>
+
+            <div class="rows">
+                <label> Juoksun pituus:</label>
+                <div class="inline-inputs">
+                    <input type="number" name="km" placeholder="km" min="0">
+                </div>
             </div>
-            <p></p>
-            <label>Juoksun tyyppi:</label>
-            <div class="radio-group">
-                <label><input type="radio" name="run_type" value="kevyt">Kevyt</label>
-                <label><input type="radio" name="run_type" value="tavoitteellinen">Tavoitteellinen</label>
-                <label><input type="radio" name="run_type" value="kisaan tähtäävä">Kisaan tähtäävä</label>
-                <label><input type="radio" name="run_type" value="kisa">Kisa</label>
+
+            <div class="rows">
+                <label for="terrain">Maasto:</label>
+                <div class="checkbox-group">
+                    <label><input type="checkbox" name="terrain" value="juoksumatto">Juoksumatto</label>
+                    <label><input type="checkbox" name="terrain" value="katu">Katu</label>
+                    <label><input type="checkbox" name="terrain" value="rata">Rata</label>
+                    <label><input type="checkbox" name="terrain" value="hiekkatie">Hiekkatie</label>
+                    <label><input type="checkbox" name="terrain" value="metsä/epätasainen">Metsä/epätasainen</label>
+                </div>
             </div>
-            <p></p>
-            <label>Kilpailu:</label>
-            <input type="text" name="race_name" placeholder="">
-            <p></p>
-            <div>
-                <button type="submit">Hae</button>
+
+            <div class="rows">
+                <label>Juoksun tyyppi:</label>
+                <div class="radio-group">
+                    <label><input type="radio" name="run_type" value="kevyt">Kevyt</label>
+                    <label><input type="radio" name="run_type" value="tavoitteellinen">Tavoitteellinen</label>
+                    <label><input type="radio" name="run_type" value="kisaan tähtäävä">Kisaan tähtäävä</label>
+                    <label><input type="radio" name="run_type" value="kisa">Kisa</label>
+                </div>
+            </div>
+
+            <div class="rows">
+                <label>Kilpailu:</label>
+                <input type="text" name="race_name" placeholder="">
+                <div>
+                    <button type="submit">Hae</button>
+                </div>
             </div>
         </form>
 
@@ -83,11 +92,9 @@
                         {{ entry['run_type'] }}
                         {% if entry['race_name'] %}(Kisa: {{ entry['race_name']}}){% endif %}
                         <br>
-                        <em>{{ entry['other'] }}</em>
+                        <em>Juoksijan kommentti: {{entry['other'] }}</em>
                         <br>
                         <small>{{ entry['created_at'] }}</small>
-                        <p></p>
-                        <p></p>
                     </li>
                     {% endfor %}
                 </ul>
