--- a/templates/edit_entry.html
+++ b/templates/edit_entry.html
@@ -38,8 +38,8 @@
         <form class="entry-form" method="POST">
             <label> Juoksun pituus*:</label>
             <div class="inline-inputs">
-                <input type="number" name="km" value="{{ entry['distance_km']}}" min="0" required>
-                <input type="number" name="m" value="{{ entry['distance_m']}}" min="0" required>
+                <input type="number" name="km" value="{{ entry['distance_km']}}" min="0" max="999" required>
+                <input type="number" name="m" value="{{ entry['distance_m']}}" min="0" max="999" required>
             </div>
 
             <label>Aika (hh:mm:ss)*:</label>
