--- a/templates/kisa_sivu.html
+++ b/templates/kisa_sivu.html
@@ -48,7 +48,10 @@
                 <h2>TOP 10 AJAT</h2>
                 <ol>
                     {% for result in top_result %}
-                        <li>{{result['username']}} - {{result['runtime']}}</li>
+                        <li>
+                            <a href="{{url_for('user_page', username=result['username'])}}">
+                            {{result['username']}}</a>
+                             - {{result['runtime']}}</li>
                     {%else%}    
                         <p>Tulokset päivittyvät myöhemmin</p>
                     {%endfor%}
@@ -58,6 +61,7 @@
 
         <section class="comments card">
             <h3>Keskustelu kilpailusta</h3>
+            <p>Viimeiset 15 kommenttia:</p>
             {% if session.get("user_id") %}
             <form method="post" class="comment-form">
                <textarea name="comment" rows="8" class="comment-textarea" placeholder="Osallistu keskusteluun" required></textarea>
@@ -69,7 +73,13 @@
             <div class="comment-list">
                 {% for c in comments %}
                     <div class="comment">
-                        <p><strong>{{c['username']}}</strong> ({{c['created_at']}}):</p>
+                        <p>
+                            <strong>
+                                <a href="{{url_for('user_page', username=c['username'])}}">
+                                {{c['username']}}</a>
+                            </strong> 
+                            ({{c['created_at']}}):
+                        </p>
                         <p>{{c['comment']}}</p>
                     </div>
                 {%else%}
