--- a/templates/browseruns.html
+++ b/templates/browseruns.html
@@ -62,7 +62,7 @@
                     <label><input type="radio" name="run_type" value="kevyt">Kevyt</label>
                     <label><input type="radio" name="run_type" value="tavoitteellinen">Tavoitteellinen</label>
                     <label><input type="radio" name="run_type" value="kisaan tähtäävä">Kisaan tähtäävä</label>
-                    <label><input type="radio" name="run_type" value="kisa">Kisa</label>
+                    <label><input type="radio" name="run_type" value="kisat">Kisat</label>
                 </div>
             </div>
 
