--- a/templates/register.html
+++ b/templates/register.html
@@ -45,8 +45,8 @@
             <label for="username">Käyttäjänimi*:</label>
             <input type="text" id="username" name="username" placeholder="Valitse käyttäjänimi" required>
 
-            <label for="password">Salasana*:</label>
-            <input type="password" id="password" name="password" placeholder="Valitse salasana" required>
+            <label for="password">Salasana*</label>
+            <input type="password" id="password" name="password" placeholder="Vähintään 8 merkkiä, numero ja erikoismerkki" required>
 
             <label for="password2">Salasana uudestaan*:</label>
             <input type="password" id="password2" name="password2" placeholder="Toista salasana" required>
